# delay-shutdown

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
